# ChangeLog for media-video/gtk-recordmydesktop
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/gtk-recordmydesktop/ChangeLog,v 1.29 2012/10/17 03:38:54 phajdan.jr Exp $

  17 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  gtk-recordmydesktop-0.3.8-r2.ebuild:
  x86 stable wrt bug #437034

  03 Oct 2012; Agostino Sarubbo <ago@gentoo.org>
  gtk-recordmydesktop-0.3.8-r2.ebuild:
  Stable for amd64, wrt bug #437034

  03 Oct 2012; Ben de Groot <yngwin@gentoo.org>
  gtk-recordmydesktop-0.3.8-r2.ebuild:
  Add die

*gtk-recordmydesktop-0.3.8-r2 (03 Oct 2012)

  03 Oct 2012; Ben de Groot <yngwin@gentoo.org>
  +gtk-recordmydesktop-0.3.8-r2.ebuild:
  Add sed to fix bug #415225 and migrate to EAPI=4

  12 Mar 2011; Tim Harder <radhermit@gentoo.org>
  -gtk-recordmydesktop-0.3.8.ebuild:
  Remove old.

  12 Mar 2011; Thomas Kahle <tomka@gentoo.org>
  gtk-recordmydesktop-0.3.8-r1.ebuild:
  x86 stable per bug 356259

  01 Mar 2011; Markos Chandras <hwoarang@gentoo.org>
  gtk-recordmydesktop-0.3.8-r1.ebuild:
  Stable on amd64 wrt bug #356259

  01 Mar 2011; Tim Harder <radhermit@gentoo.org>
  gtk-recordmydesktop-0.3.8.ebuild, gtk-recordmydesktop-0.3.8-r1.ebuild:
  Add slot dependencies for gtk+.

*gtk-recordmydesktop-0.3.8-r1 (15 Nov 2010)

  15 Nov 2010; Tim Harder <radhermit@gentoo.org>
  +gtk-recordmydesktop-0.3.8-r1.ebuild,
  +files/gtk-recordmydesktop-0.3.8-check-for-jack.patch:
  Revision bump to fix check for jack support (bug #311689 by Crazycheese).
  Update to EAPI 3.

  23 Apr 2009; Christian Faulhammer <fauli@gentoo.org>
  gtk-recordmydesktop-0.3.8:
  add x11-apps/xwininfo to RDEPEND as reported on bug 265069 by cedk

  07 Mar 2009; Christian Faulhammer <fauli@gentoo.org>
  -gtk-recordmydesktop-0.3.7.2.ebuild:
  clean up

  07 Mar 2009; Christian Faulhammer <fauli@gentoo.org>
  gtk-recordmydesktop-0.3.8.ebuild:
  stable x86, bug 259357

  07 Mar 2009; Thomas Anderson <gentoofan23@gentoo.org>