@@ -1,16 +1,27 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX gtk-recordmydesktop-0.3.8-check-for-jack.patch 1200 SHA256 5aa0721cadcad73afd8c046e48a31a2ae503452e1808b7981e471467e279da4b SHA512 439b756afd6d078ff71ce111b4a63b3bb527a09d63d62139396689a0b4c3c51ebb08a7d9e07e909b9ba43fde6578e8b693a2f80372ed15f5f761eb7747091c3e WHIRLPOOL eccd3c6fe6d700a069d81ac901908ca5e906cfd06232a12dc65277a91de5dbbcb66774f44f3c4a973240ceb75fc0239383b2269beb72b531c37e651c3d35bd81
 DIST gtk-recordmydesktop-0.3.8.tar.gz 176381 SHA256 61ad43a6e4f0bf86d8553f03297e4b1b137b47337fa150ce1da8c24494ca8326 SHA512 7d9785b81b17e7a8fbfcd7dfd227f4bce38b450150b89819b30e9b0e17c4053bda02fc1f653a18ddf4ca2a0f2157dd3c18f061b3ca661c10a9dd7208b1183e49 WHIRLPOOL 1464618ae3e7f93759c5407593bf5da9baaeeace13ec64a25d92c5611a10eb1f5cc84753516f574352a4c58f9c2919657b5bada0d94af0d57706a667110457c6
 EBUILD gtk-recordmydesktop-0.3.8-r1.ebuild 1040 SHA256 eb587a10667646a9526fc7f51b5dff6a6cf1dfef28a928629578b5a413e85258 SHA512 9186e1bd29d20d519af0b84ce7272c860a9c24401e37dd5c8ab84768287d09d0ccbfed29d52f505afdfb3b794a77b8972f33ddb8189b84b3212ef1386b0fe651 WHIRLPOOL bcaf8239dad67e870d88c3a9856a2ede7e165085139d6260d2ed334f4b2550040b864dfb00825fe2131aa5cd093ec6208b6beffd2f8c0ef76dad9b75db77b8ee
 EBUILD gtk-recordmydesktop-0.3.8-r2.ebuild 1182 SHA256 39fc755b8a281b8b18bd09d4890c0ef3aa7422447dfd2b358382cfed2e5a85f9 SHA512 9758937fbb76100b8702e82191caa0d33df0c060cc98814924269aa9aa3634d1356bc76f9c7c1bf54335c2d217ab1f004851020eb5ebc89ad8fb4f8495b0bce6 WHIRLPOOL a560096a9b8e446c4e62940ca76808192c47e4d01a5beb41430192f5dd7db6ecabe30733dd263a3dbccde948535aabd0ad717e4f3de55f4580bab8bb37dc3b50
-MISC ChangeLog 4464 SHA256 a558076dec08fdf612c131f323ec3260af59f81801b0732dd6fcbe1be8099c7c SHA512 600b2ac9c3524388b2886493eb00e609563d1c567e4768068533ef5381948ca9d6576c120893905a4a50c6cbaa5872781cd35c5a34a86e6fef29d274fca19cf7 WHIRLPOOL 8ca92fa17958793fa2591881f14d49ec72ffb20a15e82f47dc66984ffee1f10ca86545d97f9e5625203b124ffcd3f335f0db17569122701f0391e454581a4482
+EBUILD gtk-recordmydesktop-0.3.8-r3.ebuild 1270 SHA256 3a2d4a3a247547d15d09c3d82b268dc438eb7a8eb87c8672719db6e09a33a822 SHA512 f00736b30e5445cc7b87a7497f0765f532369322ee9e215f98bfb077fca713a5ac6a0f4f7d41639b733a13e9ae988126f1084ab668983337a199b84a6be7a1f3 WHIRLPOOL bc2190f177c56fd23d738b730dc3c4b4c358d55890d19a843cbaeda09c37d95ca6b9e188263b36bbb9e2fb3c4e104797e455475e86a7ea7272efa6d1cfeebab1
+MISC ChangeLog 4728 SHA256 9944fe63e32c22384da0532dc9d1635b598fffa6ba4e5673f7f7574b4eb86907 SHA512 f00f01b0d08583c574a3bf6d7c9e249bdd9dda9acd6eec60b87eedad34693a06dee8fa177cfef7b32e3a719ad8856fed024f9d5b7b40c3a0133061daa6252f2d WHIRLPOOL af5aa07bc3fffad21a01f3ae34d1a6bf7d154a7679adbbdd3f2fa050dede4f077931867745631f1356f89af63a933cdbdede20241aa1e554d38e1fde557317cf
 MISC metadata.xml 226 SHA256 b159adc5c7076105f4bc05f02d3c1e12bcad82faedf5df5ba4888077732ebf64 SHA512 27bb961ec854314d18540b10d66a90cf767b02174b05afb6e02385ffbfa5a9b327b762fdfaa38565210f900edd6fe035d3f53f2004c8d261e5bb8737d0cb5955 WHIRLPOOL 5a685dc611c0f38669abfd59d995c78a2571c3f468adf308d2aa85aec7b92a6d8b9be4db008de5da0fbb0a0bb99e1565e15ed42b2e92f0c3df84520c62854e33
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlB+KFAACgkQuUQtlDBCeQK2LwCeIv5EL7OrK4qoUVvJvhtjIM1n
-krIAnRZUcrkhdRhbecgGFP0Y34XADfR1
-=wB8e
+iQIcBAEBCgAGBQJSoWAWAAoJEKXdFCfdEflKlNMP/1YVNBRPMFfgrYikQ/MkSJ9v
+T6/BgNZ5H6WQ1IbTa+/tIu8re9s9pre3JIhVCduT4GTSfap7YADpLo66VD2enyyJ
+DzT/QJUwVKhnkLF+CYjByhjbxRu0I6Ookb1RN7+Lk8DRaSjvEsBxSGz4vRV7FM+s
+JL90Y0kiWsAIzy+f0oEAk7XINzOM+w5Jnfeq92JWVaWAjQHIfPjJsNj/kWTkQstr
+bJXKCWet/41+3/h7kdIdIo79cXxXLHLGAilnkDiCwF4E90g4I7IPJmDN2RbY/tTa
+C8MpOUUp5sjeImXg0DYoCQ0+mj/NzP69tIpiK7iZO8Amll9zPS8wVvb6+RDrEDLK
+LTm4sf2iI37Z0dlCo2Mv2PFJ3joyG3YUZBwRJvpL7gHb/fJT9xPLwQBe0OQR467c
+UiWxknXL7NMxOJbUaf3rgXKvqCWFJkAwYXINVftZDlH8NL8trnoVMkwPNSt3XYOG
+D29rWMQKayfNEDv7NQvklsgOTG9c+bsF3FBnRNHQ2zinBppvZcaEZ9D3qNXk2SRm
+iVoukGY3z+hTjbZAWB6lodPpi8mTNyUm6aD+fRFCSbexZ4Ew7duzlZrnID+TcyXa
+MpQZeoGGwC2t3Njr2GrfpB8o5ItIyDGO80QagGSD+li45v88mSDCGUpxnRJH63qU
+qsHUaRGuXBoYNkcAgFz6
+=hXpI
 -----END PGP SIGNATURE-----
