@@ -1,0 +1,14 @@
+DEFINED_PHASES=install prepare setup
+DEPEND=>=x11-libs/gtk+-2.10.0:2 dev-python/pygtk:2 >=media-video/recordmydesktop-0.3.5 x11-apps/xwininfo python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,python_single_target_python2_7(+)?]
+DESCRIPTION=GTK+ interface for RecordMyDesktop
+EAPI=5
+HOMEPAGE=http://recordmydesktop.sourceforge.net/
+IUSE=python_targets_python2_7 python_single_target_python2_7
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2
+RDEPEND=>=x11-libs/gtk+-2.10.0:2 dev-python/pygtk:2 >=media-video/recordmydesktop-0.3.5 x11-apps/xwininfo python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,python_single_target_python2_7(+)?]
+RESTRICT=test
+SLOT=0
+SRC_URI=mirror://sourceforge/recordmydesktop/gtk-recordmydesktop-0.3.8.tar.gz
+_eclasses_=eutils	a82a329b538368791f5a6113c60e557e	multilib	892e597faee02a5b94eb02ab512e7622	python-single-r1	82a55861314bbcedaf1e08ed4dd651b3	python-utils-r1	49ee0ca5e1019d8f256a23692dad2642	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=ecb9d52148e39857ea87d1f6d9de8de2
