@@ -1,6 +1,13 @@
 # ChangeLog for media-video/gtk-recordmydesktop
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/gtk-recordmydesktop/ChangeLog,v 1.29 2012/10/17 03:38:54 phajdan.jr Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-video/gtk-recordmydesktop/ChangeLog,v 1.30 2013/12/06 05:25:20 zerochaos Exp $
+
+*gtk-recordmydesktop-0.3.8-r3 (06 Dec 2013)
+
+  06 Dec 2013; Rick Farina <zerochaos@gentoo.org>
+  +gtk-recordmydesktop-0.3.8-r3.ebuild:
+  python-updater constantly rebuilds so converting to use python-
+  single-r1.eclass as well as fixing minor .desktop QA warning
 
   17 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   gtk-recordmydesktop-0.3.8-r2.ebuild:
